--- a/index.html
+++ b/index.html
@@ -4,14 +4,17 @@
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.2/p5.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.2/addons/p5.dom.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.6.1/p5.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.6.1/addons/p5.dom.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jsfeat/0.0.8/jsfeat-min.js"></script>
     <link rel="stylesheet" type="text/css" href="style.css">
   </head>
   <body>
     <h1>Indeed Musicbox Reader</h1>
-     <p>Track points in video. Try clicking details to track in the video. Press any key to track a bunch of random points. This is also called Lucas–Kanade optical flow.</p>
+     <p>Find edges using a <a href="https://en.wikipedia.org/wiki/Canny_edge_detector">Canny edge detector</a>.</p>
+     <p>Blur Size: <input type="range" id="blurSize" value="50"></p>
+     <p>Low Threshold: <input type="range" id="lowThreshold" value="15"></p>
+     <p>High Threshold: <input type="range" id="highThreshold" value="25"></p>
      
      <script src="musicbox_reader.js"></script>
   </body>
