--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
 
     <script src="js/WebGL.js"></script>
     <script src="js/libs/stats.min.js"></script>
+    <script src="js/controls/OrbitControls.js"></script>
     
     <script type="x-shader/x-vertex" id="vertexshader">
       uniform float amplitude;
